Some fixes: - Fix play/pause/repeat button - Fix marked area not being cleaned up - Fix comment box not getting scrollbar

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -72,7 +72,7 @@ form#smallpart-student-index {
 			z-index: 1;
 			span.marks {
 				position: absolute;
-				
+
 			}
 
 		}
@@ -313,7 +313,7 @@ tr.commentMarked div.commentInfo div.commentMarkedTag {
 	width: 100%;
     max-height: 412px;
     overflow-y: scroll;
-    display: inline-table;
+    display: inline-grid;
     overflow-x: hidden;
 	.filter > *, .filter> .et2_label{
 		float: left;
@@ -358,3 +358,5 @@ div.et2_smallpart_comment span.et2_smallpart_comment_time {
 	font-weight: bold;
 	padding-right: 5px;
 }
+
+.button_std_Play.glyphicon-repeat:before {content:"\e030";}
